# perlqt

./: .gitignore  .makeBuildMatrix.py  .travis.yml  Build.PL  CMakeLists.txt  Changes  INSTALL  LICENSE  MANIFEST  Makefile.PL  Qt.h  Qt.xs  README  binding.cpp  binding.h  cmds.gdb  handlers.cpp  handlers.h  marshall_basetypes.h  marshall_complex.h  marshall_macros.h  marshall_primitives.h  marshall_types.cpp  marshall_types.h  perlqt.h  smokeperl.h
akonadi/src/: Akonadi.xs  CMakeLists.txt  akonadihandlers.cpp
attica/src/: Attica.xs  CMakeLists.txt  atticahandlers.cpp
kdeui/src/: CMakeLists.txt  KDEUi4.xs  kdeui4handlers.cpp
kdevplatform/src/: CMakeLists.txt  KDevPlatform.xs  kdevplatformhandlers.cpp
kfile/src/: CMakeLists.txt  KFile.xs
kio/src/: CMakeLists.txt  KIO4.xs  kio4handlers.cpp
knewstuff3/src/: CMakeLists.txt  KNewStuff3.xs
ktexteditor/src/: CMakeLists.txt  KTextEditor.xs  ktexteditorhandlers.cpp
kutils/src/: CMakeLists.txt  KUtils.xs  kutilshandlers.cpp
modules/: CMakeLists.txt
modules/perlqt5/: CMakeLists.txt  PerlQt5.pm
modules/qtcore/: CMakeLists.txt  QtCore.pm  can.cpp  can.h  invokeslot.cpp  invokeslot.h  perlqtinit.cpp  perlqtinit.h  perlqtmetaobject.cpp  perlqtmetaobject.h  perlqtobject.cpp  perlqtobject.h  qtcore.xs  qtcore_handlers.cpp  qtcore_handlers.h
modules/qtcore/tests/: CMakeLists.txt  test_metaobject_creation.t  test_metaobject_slot_creation.t  test_newstyle_connect.t  test_qobject_delete.t  test_qobject_qt_metacall.t  test_slot_arguments.t
modules/qtdbus/: CMakeLists.txt  QtDBus.pm  qtdbus.xs
modules/qtdbus/tests/: test_qtdbus_loads.t
modules/qtgui/: CMakeLists.txt  QtGui.pm  qtgui.xs
modules/qtgui/tests/: test_qtgui_loads.t
modules/qthelp/: CMakeLists.txt  QtHelp.pm  qthelp.xs
modules/qthelp/tests/: test_qthelp_loads.t
modules/qtmultimedia/: CMakeLists.txt  QtMultimedia.pm  qtmultimedia.xs
modules/qtmultimedia/tests/: test_qtmultimedia_loads.t
modules/qtmultimediawidgets/: CMakeLists.txt  QtMultimediaWidgets.pm  qtmultimediawidgets.xs
modules/qtmultimediawidgets/tests/: test_qtmultimediawidgets_loads.t
modules/qtnetwork/: CMakeLists.txt  QtNetwork.pm  qtnetwork.xs
modules/qtnetwork/tests/: test_qtnetwork_loads.t
modules/qtopengl/: CMakeLists.txt  QtOpenGL.pm  qtopengl.xs
modules/qtopengl/tests/: test_qtopengl_loads.t
modules/qtpositioning/: CMakeLists.txt  QtPositioning.pm  qtpositioning.xs
modules/qtpositioning/tests/: test_qtpositioning_loads.t
modules/qtprintsupport/: CMakeLists.txt  QtPrintSupport.pm  qtprintsupport.xs
modules/qtprintsupport/tests/: test_qtprintsupport_loads.t
modules/qtqml/: CMakeLists.txt  QtQml.pm  qtqml.xs
modules/qtqml/tests/: test_qtqml_loads.t
modules/qtquick/: CMakeLists.txt  QtQuick.pm  qtquick.xs
modules/qtquick/tests/: test_qtquick_loads.t
modules/qtquickwidgets/: CMakeLists.txt  QtQuickWidgets.pm  qtquickwidgets.xs
modules/qtquickwidgets/tests/: test_qtquickwidgets_loads.t
modules/qtscript/: CMakeLists.txt  QtScript.pm  qtscript.xs
modules/qtscript/tests/: test_qtscript_loads.t
modules/qtsql/: CMakeLists.txt  QtSql.pm  qtsql.xs
modules/qtsql/tests/: test_qtsql_loads.t
modules/qtsvg/: CMakeLists.txt  QtSvg.pm  qtsvg.xs
modules/qtsvg/tests/: test_qtsvg_loads.t
modules/qttest/: CMakeLists.txt  QtTest.pm  qttest.xs
modules/qttest/tests/: CMakeLists.txt  test_qttest_loads.t
modules/qtuitools/: CMakeLists.txt  QtUiTools.pm  qtuitools.xs
modules/qtuitools/tests/: test_qtuitools_loads.t
modules/qtwebchannel/: CMakeLists.txt  QtWebChannel.pm  qtwebchannel.xs
modules/qtwebchannel/tests/: test_qtwebchannel_loads.t
modules/qtwebenginecore/: CMakeLists.txt  QtWebEngineCore.pm  qtwebenginecore.xs
modules/qtwebenginecore/tests/: test_qtwebenginecore_loads.t
modules/qtwebenginewidgets/: CMakeLists.txt  QtWebEngineWidgets.pm  qtwebenginewidgets.xs
modules/qtwebenginewidgets/tests/: test_qtwebenginewidgets_loads.t
modules/qtwidgets/: CMakeLists.txt  QtWidgets.pm  qtwidgets.xs
modules/qtwidgets/tests/: test_qtwidgets_loads.t
modules/qtxml/: CMakeLists.txt  QtXml.pm  qtxml.xs
modules/qtxml/tests/: test_qtxml_loads.t
modules/qtxmlpatterns/: CMakeLists.txt  QtXmlPatterns.pm  qtxmlpatterns.xs
modules/qtxmlpatterns/tests/: test_qtxmlpatterns_loads.t
modules/smokeperl/: CMakeLists.txt  SmokePerl.pm  smokeperl.xs
perl/: Build.PL  CMakeLists.txt  MANIFEST  Makefile.PL  Qt.xs  README  binding.cpp  binding.h  doxsubpp.pl  handlers.cpp  marshall_complex.h  marshall_macros.h  marshall_primitives.h  marshall_types.cpp  marshall_types.h
perl/inc/: QtBuilder.pm
perl/kdecore/lib/: KDECore4.pm
perl/kdecore/src/: CMakeLists.txt  KDECore4.xs  kdecore4handlers.cpp
perl/kdeui/: CMakeLists.txt
perl/kdeui/lib/: KDEUi4.pm
perl/kdeui/src/: CMakeLists.txt  KDEUi4.xs  kperlpluginfactory.cpp
perl/kio/lib/: CMakeLists.txt
perl/kio/src/: CMakeLists.txt
perl/lib/: CMakeLists.txt  Qt.pm  Qt4.pm
perl/lib/Qt/: CMakeLists.txt  classinfo.pm  debug.pm  isa.pm  signals.pm  slots.pm
perl/lib/Qt4/: isa.pm  signals.pm  slots.pm
perl/perlqt/: MANIFEST
perl/perlqt/lib/: Qt4.pm
perl/qtcore/: Build.PL
perl/qttest/: CMakeLists.txt  QtTest4.c  QtTest4.pm  QtTest4.xs  qttest4handlers.cpp
perl/src/: CMakeLists.txt  Qt.h  Qt.xs  Qt4.xs  binding.cpp  binding.h  doxsubpp.pl  handlers.cpp  handlers.h  marshall_basetypes.h  marshall_complex.h  marshall_macros.h  marshall_primitives.h  marshall_types.cpp  marshall_types.h  smokeperl.h  util.cpp  util.h
perl/t/: a_loading.t  d_sigslot.t  e_sigslot_inherit.t  f_handlers.t
smoke/: CMakeLists.txt
smoke/qt/: generate.pl.cmake
smoke/qttest/: generate.pl.cmake
src/: CMakeLists.txt  handlers.cpp  handlers.h  marshall.cpp  marshall.h  methodcall.cpp  methodcall.h  methodresolution.cpp  methodresolution.h  smokebinding.cpp  smokebinding.h  smokemanager.cpp  smokemanager.h  smokeobject.cpp  smokeobject.h  smokeperl_export.h  undoXsubDefines.h  virtualmethodcall.cpp  virtualmethodcall.h  xsfunctions.cpp  xsfunctions.h
src/tests/: CMakeLists.txt  smoketestlib.cpp  smoketestlib.h
(+1222 files in other folders)
