#####################################################################
# PerlQt4

OPTION(ENABLE_PERLQT4 "build PerlQt4" ON)
OPTION(ENABLE_PERLQTCORE4 "build PerlQtCore4" ON)
OPTION(ENABLE_PERLQTGUI4 "build PerlQtGui4" ON)
OPTION(ENABLE_PERLQTTEST4 "build PerlQtTest4" ON)
OPTION(ENABLE_PERLKDECORE4 "build PerlKDECore4" ON)
OPTION(ENABLE_PERLKDEUI4 "build PerlKDEUi4" ON)
OPTION(ENABLE_PERLKIO4 "build PerlKIO4" ON)

add_definitions( -DDEBUG )
FIND_PACKAGE ( Perl )
FIND_PACKAGE ( PerlLibs )

include (FindPerlMore)
SET(CUSTOM_PERL_SITE_ARCH_DIR ${PERL_SITE_ARCH_DIR} CACHE DIR "Custom installation directory for perl binary extension" )

set(PERLQT4_ENABLED "no")
set(PERLQTCORE4_ENABLED "no")
set(PERLQTGUI4_ENABLED "no")
set(PERLQTTEST4_ENABLED "no")
set(PERLKDECORE4_ENABLED "no")
set(PERLKDEUI4_ENABLED "no")
set(PERLKIO4_ENABLED "no")

if(ENABLE_PERLQT4)
    add_subdirectory( perlqt )
    set(PERLQT4_ENABLED "yes")
endif(ENABLE_PERLQT4)
if(ENABLE_PERLQTCORE4)
    add_subdirectory( qtcore )
    set(PERLQTCORE4_ENABLED "yes")
endif(ENABLE_PERLQTCORE4)
if(ENABLE_PERLQTGUI4)
    add_subdirectory( qtgui )
    set(PERLQTGUI4_ENABLED "yes")
endif(ENABLE_PERLQTGUI4)
if(ENABLE_PERLQTTEST4)
    add_subdirectory( qttest )
    set(PERLQTTEST4_ENABLED "yes")
endif(ENABLE_PERLQTTEST4)
if(ENABLE_PERLKDECORE4)
    add_subdirectory( kdecore )
    set(PERLKDECORE4_ENABLED "yes")
endif(ENABLE_PERLKDECORE4)
if(ENABLE_PERLKDEUI4)
    add_subdirectory( kdeui )
    set(PERLKDEUI4_ENABLED "yes")
endif(ENABLE_PERLKDEUI4)
if(ENABLE_PERLKIO4)
    add_subdirectory( kio )
    set(PERLKIO4_ENABLED "yes")
endif(ENABLE_PERLKIO4)

message(STATUS "Build PerlQt4... " ${PERLQT4_ENABLED})
message(STATUS "Build PerlQtCore4... " ${PERLQTCORE4_ENABLED})
message(STATUS "Build PerlQtGui4... " ${PERLQTGUI4_ENABLED})
message(STATUS "Build PerlQtTest4... " ${PERLQTTEST4_ENABLED})
message(STATUS "Build PerlKDECore4... " ${PERLKDECORE4_ENABLED})
message(STATUS "Build PerlKDEUi4... " ${PERLKIO4_ENABLED})
message(STATUS "Build PerlKIO4... " ${PERLKDEUI4_ENABLED})
